--- a/app.json
+++ b/app.json
@@ -23,11 +23,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.dragnote.eka"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": "note taking app"
+    "description": "note taking app",
+    "githubUrl": "https://github.com/Ekaji/dragonnote"
   }
 }
